fixed spacing issue on appointment page for some mobile devices

--- a/src/scss/appointments.scss
+++ b/src/scss/appointments.scss
@@ -1,5 +1,5 @@
 iframe {
-  margin-top: 5.9vh;
+  margin-top: 7.5vh;
   max-width: 1170px;
   min-height: 100vh !important;
 
